--- a/index.html
+++ b/index.html
@@ -17,27 +17,19 @@
     </div>
 
     <div id="wrapper"> 
-
-
-            <div id="question">
-            </div>
-
-            <form id="answer">
-            </form>
-
-            <br>
-            <br>
-            <div id="display">
-            </div>
-
-            </form>
-        </div>
+        <div id="question"></div>
+        <form id="answer"></form>
+        <br>
+        <div id="display"></div>
+        </form>
+        <div id="time"></div>
     </div>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- quickmaths js -->
     <script src="assets/js/game.js"></script>
+
 </body>
 
 </html>
