--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     </div>
 
     <div id="wrapper"> 
-        <div id="question"></div>
-        <form id="answer"></form>
+        <div>
+            <span id="question"></span>
+            <span>
+                <form id="answer">
+                </form>
+            </span>
+        </div>
         <br>
         <div id="display"></div>
         </form>
