--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Quick Maths: Fast Math Game</title>
-    <!-- reset css-->
     <link rel="stylesheet" href="assets/css/reset.css">
-    <!-- quickmaths css-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
     <div id="navbar">
         <h1>Quick Maths</h1>
     </div>
-
     <div id="wrapper"> 
         <div>
             <span id="question"></span>
@@ -28,13 +24,14 @@
         <div id="display"></div>
         </form>
         <div id="time"></div>
+        <div>
+            <br>
+            <br>
+            <a href="https://github.com/IanWalston/QuickMaths"><img width="100px"
+                    src="assets/iconmonstr-github-1.svg"></a>
+        </div>
     </div>
-
-    <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- quickmaths js -->
     <script src="assets/js/game.js"></script>
-
 </body>
-
 </html>
