--- a/index.html
+++ b/index.html
@@ -4,36 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Quick Maths: Fast Math Game</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="navbar">
-        <h1>Quick Maths</h1>
-    </div>
-    <div id="wrapper"> 
-        <div>
-            <span id="question"></span>
-            <span>
-                <form id="answer">
-                </form>
-            </span>
-        </div>
-        <br>
-        <div id="display"></div>
-        </form>
-        <div id="time"></div>
 
-        <div>
-            <br>
-            <br>
-            <a href="https://github.com/IanWalston/QuickMaths"><img width="100px"
-                    src="assets/iconmonstr-github-1.svg"></a>
-        </div>
+    <h1>Quick Maths</h1>
+
+    <div id="wrapper"> 
+        <span id="question"></span>
+        <form id="answer"></form>
+        <div id="display"></div>
+        <div id="time"></div>
     </div>
+    <a href="https://github.com/IanWalston/QuickMaths"><img width="100px" src="github.svg"></a>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/js/game.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
